--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ header {
 
 #navbar nav a {
   display: inline-block;
-  width: 16.666%;
+  width: 16.66666667%;
 }
 
 /*////////// LOGO //////////*/
