--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,7 @@ header {
   padding: 22px 0;
   text-transform: uppercase;
   color: black;
+  text-decoration: none;
   text-align: center;
   border-right: 1px solid #ccc;
 }
