--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,10 @@ header {
   text-decoration: none;
   text-align: center;
   border-right: 1px solid #ccc;
+  font: 1em "Trebuchet MS", Arial, sans-serif;
 }
+
+
 
 /*////////// LOGO //////////*/
 
