automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,10 @@ header {
   font: 1em "Trebuchet MS", Arial, sans-serif;
 }
 
-
+#navbar nav a.selected {
+  background-color: #333;
+  color: white;
+}
 
 /*////////// LOGO //////////*/
 
